@@ -56,6 +56,14 @@
 2003-09-04  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> configure.ac: Test C++ compiler for __func__ support.
+  <LI> magick/log.h: Added GetCurrentFunction() macro to handle
+        __func__ support determination.  Re-wrote GetMagickModule() macro
+        to use GetCurrentFunction().  Changes should allow compilation of
+        Magick++ when the C compiler supports __func__ but the C++
+        compiler does not.<BR>
+  <LI> configure.ac: Changed from using HAS___func__ define to
+        HAS_C__func__ since this feature may be language sensitive.
   <LI> locale/C.mgk: Added missing JNGCompressionNotSupported message.
 
 </UL>
